se agrego la sesion del usuario

--- a/public/css/miestilo.css
+++ b/public/css/miestilo.css
@@ -114,4 +114,17 @@
   margin: 10px;
 }
 
+#ampliar{
+  font-size: 50px;
+  height: 105px;
+  text-align: center;
+  color: #37c0fb;
+}
+#ampliar2{
+  font-size: 50px;
+  height: 105px;
+  text-align: center;
+  
+}
+
 /* FIN:::*/
